welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: not found: value setMessage
      setMessage(cpt)
      ^